--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,7 +6,8 @@
 */
 
 :root {
-  --main-bg-color: #faf2f0;
+  --main-bg-color: rgb(250 242 239);
+  --sec-bg-color: rgb(231 219 215);
 
   --logo-font-family: "Shadows Into Light";
   --title-font-family: "Playfair Display", serif;
@@ -16,7 +17,7 @@
   --small-title-color: #242424;
   --main-text-color: #444343;
   --sec-text-color: #6b6768;
-  --other-text-color: #a28eb2;
+  --other-text-color: #ab5232;
 
   --title-size: 40px;
   --subtitle-size: 17px;
@@ -204,12 +205,13 @@ table {
 .main {
   display: flex;
   flex-direction: column;
-  margin: 30px 100px 100px 100px;
+  margin: 30px 100px 30px 100px;
 }
 
 .biography {
   display: flex;
   flex-direction: row;
+  margin-bottom: 50px;
 }
 
 .biography__section {
@@ -243,7 +245,9 @@ table {
   display: flex;
   align-items: center;
   justify-content: space-around;
+  background-color: var(--sec-bg-color);
   margin-bottom: 20px;
+  padding: 10px 0;
 }
 
 .socialmedia__links {
@@ -298,13 +302,241 @@ table {
   font-weight: 400;
 }
 
-.footer {
-  margin: 100px 100px 30px 100px;
+.expertise,
+.skills,
+.certificates {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  margin-bottom: 30px;
 }
 
-.copyright {
-  font-size: 13px;
+.expertise__title,
+.skills__title,
+.certificates__title {
+  font-family: var(--title-font-family);
+  font-size: var(--title-size);
+  font-weight: 500;
+  color: var(--big-title-color);
+  text-transform: uppercase;
+  margin-bottom: 30px;
+  text-align: left;
+}
+
+.expertise__wrapper {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.expertise__wrapper__section {
+  flex-basis: 65%;
+}
+
+.expertise__section {
+  display: flex;
+  flex-direction: column;
+}
+
+.expertise__lineone,
+.expertise__linetwo {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
+.expertise__date {
+  font-size: var(--sec-size);
+  color: var(--sec-text-color);
+}
+
+.expertise__btn {
+  width: 13px;
+  height: auto;
+  cursor: pointer;
+}
+
+.expertise__position {
+  font-size: var(--main-size);
+  color: var(--small-title-color);
+  font-weight: 600;
+  text-transform: uppercase;
+}
+
+.expertise__office {
+  font-size: var(--sec-size);
+  color: var(--other-text-color);
+  font-style: italic;
+}
+
+.task__container {
+  width: 100%;
+  background-color: var(--sec-bg-color);
+  padding: 30px 30px 50px 50px;
+  margin-bottom: 30px;
+  border: 1px solid var(--sec-bg-color);
+}
+
+.task {
+  font-size: var(--main-size);
+  list-style-type: disc;
+  margin-bottom: 15px;
+  line-height: 20px;
+  color: var(--main-text-color);
+}
+
+.task:last-child {
+  margin-bottom: 0;
+}
+
+.expertise__aside {
+  flex-basis: 35%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.expertise__figure {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 80px;
+}
+
+.expertise__figure > img {
+  width: 200px;
+  height: 200px;
+  object-fit: cover;
+  margin-bottom: 20px;
+  border-radius: 15px;
+}
+
+.expertise__figure > figcaption {
+  font-size: var(--main-size);
+  color: var(--main-text-color);
+  text-align: center;
+}
+
+.skills__section {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  gap: 20px;
+  margin-bottom: 20px;
+}
+
+.skills__wrapper {
+  display: flex;
+  flex-direction: column;
+  background-color: var(--sec-bg-color);
+  padding: 30px;
+  width: 400px;
+  height: 200px;
+}
+
+.skills__subtitle {
+  font-size: var(--main-size);
+  color: var(--small-title-color);
+  font-weight: 600;
+  text-transform: uppercase;
+  margin-bottom: 20px;
+}
+
+.skills__list {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-size: var(--main-size);
+  margin-bottom: 15px;
+  line-height: 20px;
+  color: var(--main-text-color);
+}
+
+.skills__list:last-child {
+  margin-bottom: 0;
+}
+
+.certificates__section {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  margin-bottom: 20px;
+  flex-wrap: wrap;
+  gap: 20px;
+}
+
+.certificates__wrapper {
+  display: flex;
+  align-items: center;
+  background-color: var(--sec-bg-color);
+  padding: 30px;
+  width: 610px;
+  /* width: 50%; */
+  /* margin-right: 20px; */
+}
+
+.certificates__img {
+  width: 50px;
+  height: auto;
+  margin-right: 20px;
+}
+.certificates__text {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: space-around;
+}
+
+.certificates__name {
+  font-size: var(--main-size);
+  color: var(--main-text-color);
+  text-transform: uppercase;
+  margin-bottom: 15px;
+}
+
+.certificates__office {
+  font-size: var(--sec-size);
+  color: var(--sec-text-color);
+}
+
+.footer {
+  margin: 0 100px 50px 100px;
+}
+
+.footer__title {
+  font-family: var(--title-font-family);
+  font-size: var(--title-size);
+  font-weight: 400;
+  color: var(--big-title-color);
+  letter-spacing: 1px;
+  width: 420px;
+  text-transform: capitalize;
+  text-align: left;
+  margin-bottom: 30px;
+}
+
+.footer__email {
+  margin-bottom: 20px;
+}
+
+.footer__text {
+  font-size: var(--main-size);
+  color: var(--main-text-color);
+  text-transform: uppercase;
+}
+
+.footer__links {
+  font-size: var(--main-size);
+  color: var(--other-text-color);
+}
+
+.footer__copyright {
+  font-size: var(--sec-size);
+  color: var(--sec-text-color);
   font-weight: 500;
   font-style: italic;
-  color: #242424;
 }
