--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -200,6 +200,10 @@ table {
   color: #ee7968;
 }
 
+.nav-header__bars {
+  display: none;
+}
+
 /* header content end */
 
 .main {
@@ -248,6 +252,10 @@ table {
   background-color: var(--sec-bg-color);
   margin-bottom: 20px;
   padding: 10px 0;
+}
+
+.biography__socialmedia.mobile {
+  display: none;
 }
 
 .socialmedia__links {
@@ -331,11 +339,14 @@ table {
 
 .expertise__wrapper__section {
   flex-basis: 65%;
+  width: 1000px;
 }
 
 .expertise__section {
   display: flex;
   flex-direction: column;
+  margin-bottom: 30px;
+  border-bottom: 2px solid var(--sec-bg-color);
 }
 
 .expertise__lineone,
@@ -351,10 +362,18 @@ table {
   color: var(--sec-text-color);
 }
 
-.expertise__btn {
+.expertise__btn--open {
   width: 13px;
   height: auto;
   cursor: pointer;
+  display: block;
+}
+
+.expertise__btn--close {
+  width: 13px;
+  height: auto;
+  cursor: pointer;
+  display: none;
 }
 
 .expertise__position {
@@ -368,13 +387,13 @@ table {
   font-size: var(--sec-size);
   color: var(--other-text-color);
   font-style: italic;
+  text-align: right;
 }
 
 .task__container {
   width: 100%;
   background-color: var(--sec-bg-color);
   padding: 30px 30px 50px 50px;
-  margin-bottom: 30px;
   border: 1px solid var(--sec-bg-color);
 }
 
@@ -475,8 +494,6 @@ table {
   background-color: var(--sec-bg-color);
   padding: 30px;
   width: 610px;
-  /* width: 50%; */
-  /* margin-right: 20px; */
 }
 
 .certificates__img {
@@ -527,11 +544,13 @@ table {
   font-size: var(--main-size);
   color: var(--main-text-color);
   text-transform: uppercase;
+  line-height: 20px;
 }
 
 .footer__links {
   font-size: var(--main-size);
   color: var(--other-text-color);
+  line-height: 20px;
 }
 
 .footer__copyright {
@@ -539,4 +558,179 @@ table {
   color: var(--sec-text-color);
   font-weight: 500;
   font-style: italic;
+}
+
+.btn__fixed {
+  display: none;
+  position: fixed;
+  bottom: 20px;
+  right: 30px;
+  z-index: 99;
+  border: none;
+  outline: none;
+  background-color: #ab5232b0;
+  cursor: pointer;
+  padding: 10px;
+}
+
+.btn__fixed > img {
+  width: 15px;
+  height: 15px;
+}
+
+@media screen and (max-width: 1024px) {
+  .expertise__aside {
+    /* align-items: flex-end; */
+  }
+
+  .expertise__wrapper__section {
+    width: 620px;
+  }
+
+  .expertise__figure > figcaption {
+    width: 200px;
+  }
+
+  .skills__wrapper {
+    width: 402px;
+  }
+
+  .certificates__wrapper {
+    width: 402px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .header {
+    margin: 30px 50px 50px 50px;
+  }
+
+  .main {
+    margin: 30px 50px 30px 50px;
+  }
+
+  .biography {
+    flex-direction: column-reverse;
+  }
+
+  .biography__section {
+    flex-basis: auto;
+    padding-right: 0;
+  }
+
+  .personal-info__aside {
+    flex-basis: auto;
+    margin-bottom: 20px;
+  }
+
+  .expertise__wrapper__section {
+    flex-basis: auto;
+    width: 668px;
+  }
+
+  .expertise__aside {
+    display: none;
+  }
+
+  .skills__wrapper {
+    width: 324px;
+  }
+
+  .certificates__wrapper {
+    width: 100%;
+  }
+
+  .footer {
+    margin: 0 50px 50px 50px;
+  }
+}
+
+@media screen and (max-width: 425px) {
+  .nav-header {
+    display: none;
+  }
+
+  .nav-header__bars {
+    display: block;
+    width: 22px;
+    height: auto;
+    cursor: pointer;
+  }
+
+  .biography__socialmedia {
+    display: none;
+  }
+
+  .biography__socialmedia.mobile {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    background-color: var(--sec-bg-color);
+    margin-bottom: 20px;
+    padding: 10px 0;
+  }
+
+  .aside__img {
+    width: 250px;
+  }
+
+  .aside__text {
+    display: flex;
+    flex-direction: column;
+    line-height: 20px;
+  }
+
+  .skills__subtitle {
+    text-align: center;
+  }
+
+  .expertise__wrapper__section {
+    width: 325px;
+  }
+
+  .footer__title {
+    width: 100%;
+    text-align: center;
+  }
+
+  .footer__email {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .footer__text {
+    text-align: center;
+  }
+
+  .footer__links {
+    text-align: center;
+  }
+
+  .footer__copyright {
+    text-align: center;
+  }
+}
+
+@media screen and (max-width: 375px) {
+  .skills__list {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: var(--main-size);
+    margin-bottom: 15px;
+    line-height: 20px;
+    color: var(--main-text-color);
+  }
+
+  .expertise__wrapper__section {
+    width: 275px;
+  }
+
+  .skills__list > span {
+    display: none;
+  }
+
+  .footer__copyright > span {
+    display: none;
+  }
 }
