--- a/assets/sass/components/_variables.scss
+++ b/assets/sass/components/_variables.scss
@@ -1,5 +1,5 @@
 $primaryBackground: #faf2ef;
-$secondaryBackground: #e7dbd7;
+$secondaryBackground: #dfaf5e;
 
 $titleColor: #242424;
 $primaryColor: #444343;
